@@ -122,12 +122,9 @@ TAO_UnionDef_i::discriminator_type_i (ACE_ENV_SINGLE_ARG_DECL)
   TAO_IDLType_i *impl =
     TAO_IFR_Service_Utils::path_to_idltype (disc_path,
                                             this->repo_);
-  ACE_CHECK_RETURN (CORBA::TypeCode::_nil ());
-
   if (0 == impl)
   {
-     ACE_THROW(CORBA::OBJECT_NOT_EXIST());
-     ACE_CHECK_RETURN (CORBA::TypeCode::_nil ());
+     ACE_THROW_RETURN (CORBA::OBJECT_NOT_EXIST(), CORBA::TypeCode::_nil () );
   }
 
   return impl->type_i (ACE_ENV_SINGLE_ARG_PARAMETER);
@@ -299,11 +296,9 @@ TAO_UnionDef_i::members_i (ACE_ENV_SINGLE_ARG_DECL)
 
       impl = TAO_IFR_Service_Utils::path_to_idltype (path,
                                                      this->repo_);
-      ACE_CHECK_RETURN (0);
       if (0 == impl)
       {
-        ACE_THROW(CORBA::OBJECT_NOT_EXIST());
-        ACE_CHECK_RETURN (0);
+        ACE_THROW_RETURN (CORBA::OBJECT_NOT_EXIST(), 0 );
       }
 
       retval[k].type = impl->type_i (ACE_ENV_SINGLE_ARG_PARAMETER);
